--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "start:server": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "json-server-auth": "^2.1.0",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.33.1",
+    "sass": "^1.53.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
@@ -21,7 +27,8 @@
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.4",
+    "postcss-loader": "^7.0.1",
+    "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
   }
 }
