--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "class-transformer": "^0.5.1",
+    "clsx": "^1.2.1",
     "json-server-auth": "^2.1.0",
     "next": "12.1.6",
     "react": "18.2.0",
